[gd_scene load_steps=6 format=3 uid="uid://dtr7yni3tc8kw"]

[ext_resource type="Texture2D" uid="uid://c5nscxbmv28hv" path="res://Assets/pipe-green.png" id="1_10pnm"]
[ext_resource type="Script" path="res://Scenes/pipes.gd" id="1_ltive"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbado"]
size = Vector2(48, 477)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7a5x"]
size = Vector2(50, 481)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wvm5"]
size = Vector2(17, 120)

[node name="Pipes" type="Node2D"]
script = ExtResource("1_ltive")

[node name="TopPipe" type="Area2D" parent="."]
position = Vector2(2.08165e-12, -300)
rotation = 3.14159

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
texture = ExtResource("1_10pnm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(-2.09772e-05, -0.5)
shape = SubResource("RectangleShape2D_sbado")

[node name="BottomPipe" type="Area2D" parent="."]
position = Vector2(2.08165e-12, 300)

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
texture = ExtResource("1_10pnm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(-2.08165e-12, 1.5)
shape = SubResource("RectangleShape2D_w7a5x")

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(38.5, 1)
shape = SubResource("RectangleShape2D_3wvm5")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="body_entered" from="TopPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_body_entered"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_point_scored"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
